--- a/src/hjLunarCalendarGenerator.dproj
+++ b/src/hjLunarCalendarGenerator.dproj
@@ -49,15 +49,17 @@
 			<DCCReference Include="Main.pas">
 				<Form>frmMain</Form>
 			</DCCReference>
-			<DCCReference Include="library\CalendarCommons.pas"/>
-			<DCCReference Include="library\CalendarDataGenerator.pas"/>
-			<DCCReference Include="library\CalendarDataSaver.pas"/>
-			<DCCReference Include="library\CalendarDataSaverToICS.pas"/>
-			<DCCReference Include="library\LunarCalendarDataGenerator.pas"/>
-			<DCCReference Include="core\hjLunarDateConverter.pas"/>
-			<DCCReference Include="core\hjLunarDateType.pas"/>
-			<DCCReference Include="controller\MainController.pas"/>
-			<None Include="core\LunarTableData.inc"/>
+			<DCCReference Include="caldata\CalendarCommons.pas"/>
+			<DCCReference Include="caldata\CalendarDataGenerator.pas"/>
+			<DCCReference Include="caldata\CalendarDataSaver.pas"/>
+			<DCCReference Include="caldata\CalendarDataSaverToICS.pas"/>
+			<DCCReference Include="caldata\LunarCalendarDataGenerator.pas"/>
+			<DCCReference Include="lib\hjLunarDateConverter.pas"/>
+			<DCCReference Include="lib\hjLunarDateType.pas"/>
+			<DCCReference Include="ctrl\MakeCalendarController.pas"/>
+			<DCCReference Include="ctrl\SpecifiedDateController.pas"/>
+			<DCCReference Include="model\CalendarData.pas"/>
+			<None Include="lib\LunarTableData.inc"/>
 			<BuildConfiguration Include="Base">
 				<Key>Base</Key>
 			</BuildConfiguration>
